--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <!-- nav bar at the top of the page -->
     <nav>
+        <h1>Caroline Hartwell</h1>
         <ul>
             <li>
                 <a href="#about-me">About Me</a>
