added header photo and flex box

--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
         </ul>
     </nav>
     <main>
+        <section>
+            <img id="header-image" src="assets\images\th.jpg" alt="forest photo">
+        </section>
         <section id="about-me" >
             <h2>About Me</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure deserunt ab sed eligendi. Esse praesentium corporis velit quas. Non fugiat placeat nihil ad reiciendis voluptate molestias minus accusamus tempora!</p>
         </section>
         <section id="work">
             <h2>Work</h2>
+            <section id="work-boxes">
+                
+            </section>
         </section>
         <section id="contact-me">
             <h2>Contact Me</h2>
-        </section>
-        <section id="resume">
-            <h4>Click here to see my resume!</h4>
         </section>
 
     </main>
