--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
         <section id="work">
             <h2>Work</h2>
             <section id="work-boxes">
-                
+
             </section>
         </section>
         <section id="contact-me">
             <h2>Contact Me</h2>
+            <p>555-555-5555</p>
+            <p>email@email.com</p>
+            <p><a href="https://github.com/chart099/Portfolio">GitHub</a></p>
         </section>
 
     </main>
