added reset css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets\reset.css">
     <link rel="stylesheet" href="assets\style.css">
     <title>Personal Portfolio</title>
 </head>
@@ -36,7 +37,15 @@
         <section id="work">
             <h2>Work</h2>
             <section id="work-boxes">
-
+                <section id="primary-project">
+                    <section id="project1"></section>
+                </section>
+                <section id="secondary-project">
+                    <section id="project2"></section>
+                    <section id="project3"></section>
+                    <section id="project4"></section>
+                    <section id="project5"></section>
+                 </section>
             </section>
         </section>
         <section id="contact-me">
