--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <header>
             <img id="header-image" src="assets\images\th.jpg" alt="forest photo">
-        </section>
+            <h3 id="header-subtitle">Cool Subtitle</h3>
+        </header>
         <section id="about-me" >
             <h2>About Me</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iure deserunt ab sed eligendi. Esse praesentium corporis velit quas. Non fugiat placeat nihil ad reiciendis voluptate molestias minus accusamus tempora!</p>
@@ -38,13 +39,21 @@
             <h2>Work</h2>
             <section id="work-boxes">
                 <section id="primary-project">
-                    <section id="project1"></section>
+                    <h4>Project 1</h4>
                 </section>
                 <section id="secondary-project">
-                    <section id="project2"></section>
-                    <section id="project3"></section>
-                    <section id="project4"></section>
-                    <section id="project5"></section>
+                    <section id="project2" class="box">
+                        <h4>Project 2</h4>
+                    </section>
+                    <section id="project3" class="box">
+                        <h4>Project 3</h4>
+                    </section>
+                    <section id="project4" class="box">
+                        <h4>Project 4</h4>
+                    </section>
+                    <section id="project5" class="box">
+                        <h4>Project 5</h4>
+                    </section>
                  </section>
             </section>
         </section>
