attempt to fix layout

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     </nav>
     <main>
         <header>
-            <img id="header-image" src="assets\images\th.jpg" alt="forest photo">
-            <h3 id="header-subtitle">Cool Subtitle</h3>
+            <section id="header-image-container">
+                <img id="header-image" src="assets\images\th.jpg" alt="forest photo">
+                <p id="header-subtitle">Cool Subtitle</p>
+             </section>
         </header>
         <section id="about-me" >
             <h2>About Me</h1>
@@ -59,9 +61,11 @@
         </section>
         <section id="contact-me">
             <h2>Contact Me</h2>
-            <p>555-555-5555</p>
-            <p>email@email.com</p>
-            <p><a href="https://github.com/chart099/Portfolio">GitHub</a></p>
+            <ul>
+                <li>555-555-5555</li>
+                <li>email@email.com</li>
+                <li><a href="https://github.com/chart099/Portfolio">GitHub</a></li>
+            </ul>
         </section>
 
     </main>
