--- a/index.html
+++ b/index.html
@@ -41,19 +41,24 @@
             <h2>Work</h2>
             <section id="work-boxes">
                 <section id="primary-project">
+                    <img src="assets\images\9quGkLG.jpg" alt="">
                     <h4>Project 1</h4>
                 </section>
                 <section id="secondary-project">
                     <section id="project2" class="box">
+                        <img src="assets/images/P2TWdXy.jpg" alt="">
                         <h4>Project 2</h4>
                     </section>
                     <section id="project3" class="box">
+                        <img src="assets\images\P2TWdXy.jpg" alt="">
                         <h4>Project 3</h4>
                     </section>
                     <section id="project4" class="box">
+                        <img src="assets/images/Plain-background-wallpapers-hd-free.jpg" alt="">
                         <h4>Project 4</h4>
                     </section>
                     <section id="project5" class="box">
+                        <img src="assets\images\wp2610900.jpg" alt="">
                         <h4>Project 5</h4>
                     </section>
                  </section>
