--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Work</h2>
             <section id="work-boxes">
                 <section id="primary-project">
-                    <img src="assets\images\9quGkLG.jpg" alt="">
+                    <img src="assets\images\92r6xWU.jpg" alt="">
                     <h4>Project 1</h4>
                 </section>
                 <section id="secondary-project">
@@ -50,7 +50,7 @@
                         <h4>Project 2</h4>
                     </section>
                     <section id="project3" class="box">
-                        <img src="assets\images\P2TWdXy.jpg" alt="">
+                        <img src="assets/images/9quGkLG.jpg" alt="">
                         <h4>Project 3</h4>
                     </section>
                     <section id="project4" class="box">
