--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
             <h2>Work</h2>
             <section id="work-boxes">
                 <section id="primary-project">
-                    <img src="assets\images\92r6xWU.jpg" alt="">
+                   <a href="https://chart099.github.io/Accessibility-Bootcamp-Challenge/" target="_blank"><img src="assets\images\92r6xWU.jpg" alt="abstract image"></a>
                     <h4>Project 1</h4>
                 </section>
                 <section id="secondary-project">
                     <section id="project2" class="box">
-                        <img src="assets/images/P2TWdXy.jpg" alt="">
+                        <img src="assets/images/P2TWdXy.jpg" alt="abstract image">
                         <h4>Project 2</h4>
                     </section>
                     <section id="project3" class="box">
-                        <img src="assets/images/9quGkLG.jpg" alt="">
+                        <img src="assets/images/9quGkLG.jpg" alt="abstract image">
                         <h4>Project 3</h4>
                     </section>
                     <section id="project4" class="box">
-                        <img src="assets/images/Plain-background-wallpapers-hd-free.jpg" alt="">
+                        <img src="assets/images/Plain-background-wallpapers-hd-free.jpg" alt="abstract image">
                         <h4>Project 4</h4>
                     </section>
                     <section id="project5" class="box">
-                        <img src="assets\images\wp2610900.jpg" alt="">
+                        <img src="assets\images\wp2610900.jpg" alt="abstract image">
                         <h4>Project 5</h4>
                     </section>
                  </section>
